@@ -1,4 +1,5 @@
 Development
+	Move on to the next item in the playlist, when the an open item gives an error
 	Fix the autostart property when then plugin window is hidden
 	Only emulate QuickTime with the qt plugin
 	Change the user agent to "QuickTime/7.6.2" while the plugin is loaded, makes Apple.com/trailers work again
